--- a/src/html/partials/main.html
+++ b/src/html/partials/main.html
@@ -44,6 +44,7 @@
                 <div class="coat__detail"></div>
             </div>
         </div>
+        <div class="baby__shadow"></div>
     </div>
     <div class="mandaloriano">
         <div class="complete__header tossing">
@@ -65,7 +66,7 @@
                 <div class="left__arm"></div>
                 <div class="left__hand"></div>
             </div>
-            <div class="body">
+            <div class="body__mando">
                 <div class="pentagon"></div>
                 <div class="pentagon2"></div>
                 <div class="pectoral">
@@ -108,5 +109,6 @@
                 <div class="right__foot"></div>
             </div>
         </div>
+        <div class="mando__shadow"></div>
     </div>
 </main>
