--- a/src/scss/pages/_index.scss
+++ b/src/scss/pages/_index.scss
@@ -1,4 +1,7 @@
-.main__list {
-  padding-left: 2rem;
-  padding-bottom: 20px;
+.body{
+  background-image: url(../images/fondo.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  width: 100%;
 }
