--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -4,7 +4,7 @@
 }
 
 .header{
-    background-color: yellow;
+    margin: auto;
     h1{
         display: flex;
         flex-direction: column;
@@ -13,11 +13,21 @@
         font-family: "Mandalore";
         padding-top: 15px;
         margin: 0;
+        text-align: center;
+        width: 100%;
         .first__part{
-            font-size: 40px;
+            font-size: 20px;
+            text-align: center;
+            @media all and (min-width: 768px){
+                font-size: 40px;
+            }
         }
         .second__part{
-            font-size: 120px;
+            font-size: 70px;
+            text-align: center;
+            @media all and (min-width: 768px){
+                font-size: 120px;
+            }
         }
     }
 }
