--- a/src/scss/layout/_mandaloriano.scss
+++ b/src/scss/layout/_mandaloriano.scss
@@ -10,14 +10,14 @@
         width: 150px;
         height: 142px;
         border-radius: 50% 50% 0 0;
-        background-color: grey;
+        background-color: $mando-background;
         z-index: 5;
         .mask{
             width: 150px;
             height: 25px;
             transform: translate(0, 55px);
             border-radius: 5px 6px 0 0;
-            background-color: black;
+            background-color: $mando-mask;
         }
         .bottom__header{
             width: 150px;
@@ -27,28 +27,28 @@
             .left__circle{
                 width: 60px;
                 height: 60px;
-                background-color: rgb(206, 206, 206);
+                background-color: $mando-mask-part;
                 .circle{
                     width: 59px; 
                     height: 59px; 
                     border-radius: 0 59px 0 0 ;
-                    background-color: grey;
+                    background-color: $mando-background;
                 }
             }
             .middle__circle{
                 width: 30px;
                 height: 60px;
-                background-color: black;
+                background-color: $mando-mask;
             }
             .right__circle{
                 width: 60px;
                 height: 60px;
-                background-color: rgb(206, 206, 206);
+                background-color: $mando-mask-part;
                 .circle{
                     width: 59px; 
                     height: 59px; 
                     border-radius: 59px 0 0 0 ;
-                    background-color: grey;
+                    background-color: $mando-background;
                 }
             }
         }
@@ -61,7 +61,7 @@
                 width: 30px;
                 height: 85px;
                 border-radius: 15px 0 0 0;
-                background-color: grey;
+                background-color: $mando-background;
             }
             .left__shoulder{
                 position: absolute;
@@ -69,7 +69,7 @@
                 height: 20px;
                 transform: translate(-10px);
                 border-radius: 15px 0 0 0;
-                background-color: rgb(206, 206, 206);
+                background-color: $mando-mask-part;
                 z-index: 4;
             }
             .left__shooter{
@@ -78,27 +78,27 @@
                 height: 50px;
                 transform: translate(10px, 25px);
                 z-index: 6;
-                background-color: rgb(206, 206, 206);
+                background-color: $mando-mask-part;
             }
             .left__hand{
                 width: 20px;
                 height: 20px;
                 border-radius: 0 0 15px 15px;
                 margin: auto;
-                background-color: black;
+                background-color: $mando-mask;
             }
         }
-        .body{
+        .body__mando{
             width: 125px;
             height: 120px;
-            background-color: grey;
+            background-color: $mando-background;
             .pentagon{
                 position: relative;
                 width: 24px;
                 box-sizing: content-box;
                 border-width: 30px 18px 0;
                 border-style: solid;
-                border-color: rgb(206, 206, 206) transparent;
+                border-color: $mando-mask-part transparent;
                 transform: translate(0, 25px);
             }
             .pentagon:before {
@@ -110,7 +110,7 @@
                 left: -18px;
                 border-width: 0 30px 25px;
                 border-style: solid;
-                border-color: transparent transparent rgb(206, 206, 206);
+                border-color: transparent transparent $mando-mask-part;
             }
             .pentagon2{
                 position: relative;
@@ -118,7 +118,7 @@
                 box-sizing: content-box;
                 border-width: 30px 18px 0;
                 border-style: solid;
-                border-color: rgb(206, 206, 206) transparent;
+                border-color: $mando-mask-part transparent;
                 transform: translate(65px, -5px);
             }
             .pentagon2:before {
@@ -130,7 +130,7 @@
                 left: -18px;
                 border-width: 0 30px 25px;
                 border-style: solid;
-                border-color: transparent transparent rgb(206, 206, 206);;
+                border-color: transparent transparent $mando-mask-part;
             }
             .pectoral{
                 display: flex;
@@ -138,20 +138,20 @@
                     width: 0;
                     height: 0;
                     border-top: 20px solid transparent;
-                    border-left: 45px solid rgb(206, 206, 206);
+                    border-left: 45px solid $mando-mask-part;
                     border-bottom: 20px solid transparent;
                 }
                 .rectangle{
                     width: 45px;
                     height: 65px;
-                    background-color: rgb(206, 206, 206);
+                    background-color: $mando-mask-part;
                     transform: translate(0, -5px);
                 }
                 .triangle__left{
                     width: 0;
                     height: 0;
                     border-top: 20px solid transparent;
-                    border-right: 45px solid rgb(206, 206, 206);
+                    border-right: 45px solid $mando-mask-part;
                     border-bottom: 20px solid transparent;
                 }
             }
@@ -159,7 +159,7 @@
                 width: 25px;
                 height: 150px;
                 transform: translate(50px, -145px) rotate(45deg);
-                background-color: rgb(41, 41, 41);
+                background-color: $mando-belt;
                 display: flex;
                 flex-direction: column;
                 justify-content: center;
@@ -168,7 +168,7 @@
                     width: 20px;
                     height: 5px;
                     margin-bottom: 5px;
-                    background-color: rgb(206, 206, 206);
+                    background-color: $mando-mask-part;
                     z-index: 5;
                 }
             }
@@ -179,14 +179,14 @@
                 width: 30px;
                 height: 85px;
                 border-radius: 0 15px 0 0;
-                background-color: grey;
+                background-color: $mando-background;
             }
             .right__shoulder{
                 position: absolute;
                 width: 40px;
                 height: 20px;
                 border-radius: 0 15px 0 0;
-                background-color: rgb(206, 206, 206);
+                background-color: $mando-mask-part;
                 z-index: 4;
             }
             .right__shooter{
@@ -195,14 +195,14 @@
                 height: 50px;
                 transform: translate(10px, 25px);
                 z-index: 99;
-                background-color: rgb(206, 206, 206);
+                background-color: $mando-mask-part;
             }
             .right__hand{
                 width: 20px;
                 height: 20px;
                 border-radius: 0 0 15px 15px;
                 margin: auto;
-                background-color: black;
+                background-color:$mando-mask;
             }
         }
 
@@ -215,17 +215,17 @@
         .left__leg{
             width: 35px;
             height: 70px;
-            background-color: grey; 
+            background-color: $mando-background; 
             .left__armor{
                 width: 35px; 
                 height: 17px; 
-                background-color: rgb(206, 206, 206);
+                background-color: $mando-mask-part;
                 border-radius: 0 0 35px 35px;
             }
             .left__foot{
                 width: 40px;
                 height: 20px;
-                background-color: black;
+                background-color: $mando-mask;
                 border-radius: 15px 15px 0 0;
                 transform: translate(-3px, 44px);
             }
@@ -233,21 +233,31 @@
         .right__leg{
             width: 35px;
             height: 70px;
-            background-color: grey; 
+            background-color: $mando-background; 
             .right__armor{
                 width: 35px; 
                 height: 17px; 
-                background-color: rgb(206, 206, 206);
+                background-color: $mando-mask-part;
                 border-radius: 0 0 35px 35px;
             }
             .right__foot{
                 width: 40px;
                 height: 20px;
-                background-color: black;
+                background-color: $mando-mask;
                 border-radius: 15px 15px 0 0;
                 transform: translate(-3px, 44px);
             }
         }
+    }
+    .mando__shadow{
+        position: absolute;
+        background-color:black;
+        opacity: 0.5;
+        width: 150px;
+        height: 30px;
+        transform: translate(0, 180px);
+        border-radius: 50%;
+        box-shadow: 0px 0px 18px 0px rgba(0,0,0,0.75);
     }
 }
 
